--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.auth__bg {
+}
+@media screen and (max-width: 621px) {
+  .auth__bg {
+    display: none;
+  }
+}
